--- a/style1.css
+++ b/style1.css
@@ -410,7 +410,7 @@
    grid-template-rows: 1fr 100px;
  }
  figure img {
-   object-fit: cover;
+   object-fit: fill;
    width: 100%;
    height: 100%;
  }
